--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,11 @@
 <nav>
 	<ul>
-		<li><a href="/#">Home</a></li>
-		<li><a href="/about">About</a></li>
-		<li><a href="/#contact">Contact</a></li>
+		<li><a href="/oldblog/#">Home</a></li>
+		<li><a href="/oldblog/about">About</a></li>
+		<li><a href="/oldblog/#contact">Contact</a></li>
 		<li><a href="/random">Random</a></li>
-		<li><a href="/hacking">Hacking</a></li>
-		<li><a href="/dharma">Sanatana Dharma</a></li>
-		<li><a href="/research">Research</a></li>
+		<li><a href="/oldblog/hacking">Hacking</a></li>
+		<li><a href="/oldblog/dharma">Sanatana Dharma</a></li>
+		<li><a href="/oldblog/research">Research</a></li>
 	</ul>
 </nav>
